# vig2p

./: .gitignore  README.md  pyproject.toml
src/vig2p/: __init__.py  en.py  exception.py  phonemes.py  utils.py  vi.py
