[project]
name = "vig2p"
version = "0.1.0"
description = "A bilingual Vietnamese-English grapheme-to-phoneme package."
readme = "README.md"
authors = [
    { name = "hoang1007", email = "hoangvuhuy1007@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cmudict>=1.0.32",
    "phonemizer>=3.3.0",
    "pyvinorm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyvinorm = { git = "https://github.com/hoang1007/pyvinorm.git" }
